--- a/Example_ProductBrowser/Base.lproj/Main.storyboard
+++ b/Example_ProductBrowser/Base.lproj/Main.storyboard
@@ -42,6 +42,14 @@
             </objects>
             <point key="canvasLocation" x="-726.5" y="366.5"/>
         </scene>
+        <!--HamburgerMenu-->
+        <scene sceneID="iaj-0i-JJk">
+            <objects>
+                <viewControllerPlaceholder storyboardName="HamburgerMenu" id="Xg3-8D-qmw" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S5N-S3-uSg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-339.5" y="-56"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="pFZ-lW-PoE">
             <objects>
@@ -53,6 +61,15 @@
                     <view key="view" contentMode="scaleToFill" id="mBR-xZ-fv0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RAW-wx-IKu">
+                                <rect key="frame" x="35" y="53" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="Xg3-8D-qmw" kind="presentation" id="lis-9T-XcC"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
