--- a/Example_ProductBrowser/HamburgerMenu.storyboard
+++ b/Example_ProductBrowser/HamburgerMenu.storyboard
@@ -75,6 +75,10 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="rmT-Eq-6a9" id="Ff4-TC-gnO"/>
+                                    <outlet property="delegate" destination="rmT-Eq-6a9" id="yId-C3-imV"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
