--- a/Example_ProductBrowser/Base.lproj/Main.storyboard
+++ b/Example_ProductBrowser/Base.lproj/Main.storyboard
@@ -72,23 +72,49 @@
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="B4k-c2-OtT">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="F5e-Lm-6ri">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="itemSize" width="167" height="186"/>
+                                    <size key="headerReferenceSize" width="50" height="50"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="GlG-My-NFi">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="GlG-My-NFi">
+                                        <rect key="frame" x="0.0" y="50" width="167" height="186"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="167" height="186"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Header" id="4LM-p8-GHm" customClass="HeaderCollectionReusableView" customModule="Example_ProductBrowser" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qyy-Vq-2P2">
+                                            <rect key="frame" x="8" y="8" width="359" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Qyy-Vq-2P2" firstAttribute="top" secondItem="4LM-p8-GHm" secondAttribute="topMargin" id="JSw-qo-MSo"/>
+                                        <constraint firstItem="Qyy-Vq-2P2" firstAttribute="leading" secondItem="4LM-p8-GHm" secondAttribute="leadingMargin" id="WSD-D5-4IE"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Qyy-Vq-2P2" secondAttribute="trailing" id="ZAb-Cd-Vou"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Qyy-Vq-2P2" secondAttribute="bottom" id="xXn-Pb-itq"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="textLabel" destination="Qyy-Vq-2P2" id="tQo-h0-6YX"/>
+                                    </connections>
+                                </collectionReusableView>
+                                <connections>
+                                    <outlet property="dataSource" destination="fiS-HE-mzg" id="Lgq-o3-JSp"/>
+                                    <outlet property="delegate" destination="fiS-HE-mzg" id="1Rf-hl-e5U"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -114,7 +140,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="8VB-gp-nXd">
                         <nil key="title"/>
-                        <barButtonItem key="leftBarButtonItem" title="Item" image="menu" id="70S-v8-K4U">
+                        <barButtonItem key="leftBarButtonItem" image="menu" id="70S-v8-K4U">
                             <connections>
                                 <segue destination="Xg3-8D-qmw" kind="presentation" identifier="HamburgerMenu" id="aFt-q6-reE"/>
                             </connections>
