--- a/Example_ProductBrowser/Base.lproj/Main.storyboard
+++ b/Example_ProductBrowser/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
@@ -80,14 +81,41 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="GlG-My-NFi">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="GlG-My-NFi" customClass="ProductCollectionViewCell" customModule="Example_ProductBrowser" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="167" height="186"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="167" height="186"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zeN-KM-17x">
+                                                    <rect key="frame" x="8" y="8" width="151" height="151"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="zeN-KM-17x" secondAttribute="height" multiplier="1:1" id="FN0-Zi-E0l"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BH8-kt-X8V">
+                                                    <rect key="frame" x="8" y="159" width="151" height="19"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="zeN-KM-17x" firstAttribute="top" secondItem="GlG-My-NFi" secondAttribute="topMargin" id="Ca0-yw-iNd"/>
+                                            <constraint firstItem="BH8-kt-X8V" firstAttribute="bottom" secondItem="GlG-My-NFi" secondAttribute="bottomMargin" id="Tft-0b-PQN"/>
+                                            <constraint firstItem="BH8-kt-X8V" firstAttribute="top" secondItem="zeN-KM-17x" secondAttribute="bottom" id="Zn4-KH-1Jn"/>
+                                            <constraint firstItem="BH8-kt-X8V" firstAttribute="leading" secondItem="GlG-My-NFi" secondAttribute="leadingMargin" id="dsX-bd-CPy"/>
+                                            <constraint firstItem="zeN-KM-17x" firstAttribute="trailing" secondItem="GlG-My-NFi" secondAttribute="trailingMargin" id="ezC-gO-t4b"/>
+                                            <constraint firstItem="zeN-KM-17x" firstAttribute="leading" secondItem="GlG-My-NFi" secondAttribute="leadingMargin" id="fJB-se-QeG"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="BH8-kt-X8V" secondAttribute="trailing" id="p1W-V3-oyT"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="zeN-KM-17x" id="QW4-2N-0Se"/>
+                                            <outlet property="priceLabel" destination="BH8-kt-X8V" id="IDI-Yl-WGY"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Header" id="4LM-p8-GHm" customClass="HeaderCollectionReusableView" customModule="Example_ProductBrowser" customModuleProvider="target">
@@ -149,7 +177,7 @@
                             <rect key="frame" x="116" y="5.5" width="143" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="ZYc-kS-w1K">
+                                <imageView hidden="YES" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="ZYc-kS-w1K">
                                     <rect key="frame" x="40.5" y="7.5" width="62" height="18"/>
                                 </imageView>
                             </subviews>
